--- a/ASPCore.AllThatBTS.Web/Views/Shared/_Layout.cshtml
+++ b/ASPCore.AllThatBTS.Web/Views/Shared/_Layout.cshtml
@@ -101,6 +101,7 @@
         <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
     <environment exclude="Development">
+        <link rel="stylesheet" href="~/css/sticky-footer-navbar.css" asp-append-version="true" />
         <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
                 asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
                 asp-fallback-test="window.jQuery"
