--- a/ASPCore.AllThatBTS.Web/Views/Board/Board.cshtml
+++ b/ASPCore.AllThatBTS.Web/Views/Board/Board.cshtml
@@ -1,7 +1,139 @@
-﻿
-@{
-    ViewData["Title"] = "Board";
+﻿@{
+    ViewData["Title"] = "Member A 게시판";
+    Layout = "_LayoutSidebarOnly";
 }
 
-<h2>Board</h2>
+@model BoardModel
 
+<head>
+    <style>
+        ul, li {
+            list-style: none;
+        }
+
+        li {
+            display: inline-block;
+        }
+    </style>
+</head>
+
+@*<div class="board d-none d-xs-none d-sm-block d-md-block d-lg-block d-xl-block">*@
+<div class="board">
+
+    <div class="text-right">
+        @foreach (BoardCategoryModel entity in Model.boardInfo.categoryList)
+        {
+            <button type="button" class="btn btn-sm btn-primary" id="category_@entity.categoryId">@entity.categoryName</button>
+        }
+    </div>
+    <p></p>
+
+    <table class="table">
+        <thead class="thead-light">
+            <tr>
+                <th scope="col" style="width: 5%">#</th>
+                <th scope="col" style="width: 10%">카테고리</th>
+                <th scope="col" style="width: 40%">제목</th>
+                <th scope="col" style="width: 10%">작성자</th>
+                <th scope="col" style="width: 10%">날짜</th>
+                <th scope="col" style="width: 5%">조회수</th>
+                <th scope="col" style="width: 5%">추천수</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (BoardDataModel entity in Model.boardDataModelList.Items)
+            {
+                <tr>
+                    <th scope="row">@entity.listNum</th>
+                    <td>@entity.categoryName</td>
+                    <td><a href="../Board/View?seq=@entity.seq">@entity.subject</a></td>
+                    <td>@entity.nickname</td>
+                    <td>@entity.createDatetime.ToShortDateString()</td>
+                    <td>@entity.readCount</td>
+                    <td>@entity.recommendCount</td>
+                </tr>
+            }
+        </tbody>
+    </table>
+
+    <p></p>
+    <div class="text-right">
+        <a class="btn btn-primary" asp-area="" asp-controller="Board" asp-action="Write" asp-route-boardId="@Model.boardInfo.boardId">글쓰기</a>
+    </div>
+
+
+    <nav aria-label="Page navigation example">
+        <ul class="pagination justify-content-center">
+            @for (var i = 1; i <= Model.boardDataModelList.TotalPages; i++)
+            {
+                <li class="page-item @(i == Model.boardDataModelList.CurrentPage ? "active" : "")">
+                    <a href="/Board?BoardId=@Model.boardInfo.boardId&pageNo=@i" class="page-link">@i</a>
+                </li>
+            }
+        </ul>
+    </nav>
+    <form class="form-inline justify-content-center" method="">
+        <select class="custom-select col-sm-1">
+            <option>제목</option>
+            <option>내용</option>
+        </select>
+        <input type="text" class="form-control col-sm-5" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
+        <button type="button" class="btn btn-outline-primary float-right">검색</button>
+    </form>
+</div>
+
+
+@*<div class="d-sm-none d-md-none d-lg-none d-xl-none">
+        <div class="text-right">
+            @foreach (BoardCategoryModel entity in Model.boardInfo.categoryList)
+            {
+                <button type="button" class="btn btn-sm btn-primary" id="category_@entity.categoryId">@entity.categoryName</button>
+            }
+        </div>
+        <p></p>
+
+        <ul>
+            @foreach (BoardDataModel entity in Model.boardDataModelList.Items)
+            {
+                <li>
+                    <a href="https://www.allthatbts.com/@entity.seq">
+                        <span class="subject">@entity.subject</span>
+                        <ul class="ginfo">
+                            <li>@entity.nickname</li>
+                            <li>@entity.createDatetime.ToShortDateString()</li>
+                            <li>@entity.readCount</li>
+                            <li>@entity.recommendCount</li>
+                        </ul>
+                    </a>
+                </li>
+            }
+        </ul>
+
+        <p></p>
+        <div class="text-right">
+            <a class="btn btn-primary" asp-area="" asp-controller="Board" asp-action="Write" asp-route-id="@Model.boardInfo.boardId">글쓰기</a>
+        </div>
+
+
+        <nav aria-label="Page navigation example">
+            <ul class="pagination justify-content-center">
+                <li class="page-item disabled">
+                    <a class="page-link" href="#" tabindex="-1">Previous</a>
+                </li>
+                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                <li class="page-item">
+                    <a class="page-link" href="#">Next</a>
+                </li>
+            </ul>
+        </nav>
+        <form class="form-inline justify-content-center" method="">
+            <select class="custom-select col-sm-1">
+                <option>제목</option>
+                <option>내용</option>
+            </select>
+            <input type="text" class="form-control col-sm-5" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
+            <button type="button" class="btn btn-outline-primary float-right">검색</button>
+        </form>
+</div>*@
