--- a/ASPCore.AllThatBTS.Web/Views/Shared/_Layout.cshtml
+++ b/ASPCore.AllThatBTS.Web/Views/Shared/_Layout.cshtml
@@ -4,97 +4,144 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"]</title>
-
-    @*<environment include="Development">
-            <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-            <link rel="stylesheet" href="~/css/site.css" />
-        </environment>
-        <environment exclude="Development">
-            <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
-                  asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
-                  asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
-            <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
-        </environment>*@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slideout/1.0.1/slideout.min.js"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <a class="navbar-brand" href="#">&nbsp;</a>
 
 
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" asp-area="" asp-controller="Board" asp-action="Board">Board</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="About">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Contact">Contact</a>
-                </li>
-            </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
+    <nav id="menu" class="menu slideout-menu">
+        <ul class="sidebar-nav">
+            <li class="sidebar-brand">
+                <a asp-area="" asp-controller="Home" asp-action="Index">
+                    AllThatBTS
+                </a>
+            </li>
+            <li>
+                <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"><span style="font-size:larger;">Member</span></a>
+                <ul class="collapse list-unstyled" id="homeSubmenu">
+                    <li>
+                        <ul>
+                            <li>
+                                <a asp-area="" asp-controller="Board" asp-action="Board" asp-route-boardId="MA"> Member A</a>
+                            </li>
+                            <li>
+                                <a asp-area="" asp-controller="Board" asp-action="Board" asp-route-boardId="MB"> Member B</a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+
+            <li>
+                <a href="#countrySubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"><span style="font-size:larger;">Country</span></a>
+                <ul class="collapse list-unstyled" id="countrySubmenu">
+                    <li>
+                        <ul>
+                            <li>
+                                <a href="#usSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"><span style="font-size:larger;">U.S</span></a>
+                                <ul class="collapse list-unstyled" id="usSubmenu">
+                                    <li>
+                                        <a asp-area="" asp-controller="Board" asp-action="Board">Board</a>
+                                    </li>
+                                    <li>
+                                        <a asp-area="" asp-controller="Home" asp-action="About">About</a>
+                                    </li>
+                                    <li>
+                                        <a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+        </ul>
+        <div class="footer">
+            <div class="container">
+                <span class="text-muted">&copy; 2018 - AllThatBTS</span>
+            </div>
         </div>
     </nav>
 
-    @*<nav class="navbar navbar-inverse navbar-fixed-top">
-            <div class="container">
+    <main id="panel" class="panel slideout-panel">
+        <nav class="navbar navbar-default" role="navigation">
+            <ul class="nav navbar-nav navbar-left">
+                <li><a class="btn btn-light toggle-button" id="menu-toggle"><i class="fas fa-bars"></i> </a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-center">
+                <li><img class="img-fluid" style="height: 50px; width: 170px; display: block;cursor:pointer" onclick="window.location='/Home/Index'" src="~/images/main/main_logo.png" /></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><button class="btn btn-light my-sm-0" onclick="window.location='/User/Login'" type="button">LOGIN</button></li>
+            </ul>
+        </nav>
+        <nav class="navbar navbar-default" style="background-color: #fbe7ee;">
+            <ul class="nav navbar-nav navbar-left">
+                <li><a id="m_all" href="#" class="btn btn-light"><i class="fas fa-th"></i></a></li>
 
-                <div class="jumbotron text-center">
-                    <h1>All That BTS</h1>
-                    <p>로고는 여기에</p>
-                </div>
 
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">ASPCore.AllThatBTS.Web</a>
-                </div>
-                <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
-                        <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                        <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                        <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-                    </ul>
+            </ul>
+            <ul class="nav navbar-nav navbar-center">
+                <li>
+                    <form class="form-inline m_mediatype">
+                        <a id="m_officialtwitter" class="nav-link" href="#"><img class="img-fluid" style="height:25px;width:25px" src="~/images/main/official_twit.png" /></a>&nbsp;&nbsp;&nbsp;
+                        <a id="m_twitter" class="nav-link" href="#"><img class="img-fluid" style="height:25px;width:25px" src="~/images/main/twit.png" /></a>&nbsp;&nbsp;&nbsp;
+                        <a id="m_youtube" class="nav-link" href="#"><img class="img-fluid" style="height:25px;width:25px" src="~/images/main/youtube_icon.png" /></a>&nbsp;&nbsp;&nbsp;
+                        <a id="m_instagram" class="nav-link" href="#"><img class="img-fluid" style="height:25px;width:25px" src="~/images/main/insta.png" /></a>
+                    </form>
+                </li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li>
+                    <a id="collapseSearch" class="btn btn-light" data-toggle="collapse" href="#collapse-search" role="button" aria-expanded="false" aria-controls="collapse-search">
+                        <i class="fas fa-search"></i>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+        <div class="collapse" id="collapse-search">
+            <div class="form-group col-md-6 mx-auto">
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <select class="custom-select" id="media-search-select" style="text-overflow:ellipsis;">
+                            <option value="A" selected>All</option>
+                            <option value="O">Of.Twitter</option>
+                            <option value="T">Twitter</option>
+                            <option value="Y">Youtube</option>
+                            <option value="I">Instagram</option>
+                        </select>
+                    </div>
+                    <input id="media-search-text" type="text" class="form-control" aria-label="Text input with dropdown button">
+                    <div class="input-group-append" id="button-addon4">
+                        <button id="media-search-button" class="btn btn-outline-secondary" type="button">Search</button>
+                    </div>
                 </div>
             </div>
-        </nav>*@
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-    </div>
-
-    <footer class="footer">
-        <div class="container">
-            <span class="text-muted">&copy; 2018 - ASPCore.AllThatBTS.Web</span>
         </div>
-    </footer>
-
+        <div class="container">
+            @RenderBody()
+        </div>
+    </main>
+    <div class="spinner" style="display:none"></div>
     <environment include="Development">
         <link rel="stylesheet" href="~/css/sticky-footer-navbar.css" asp-append-version="true" />
+        <link rel="stylesheet" href="~/css/main-site.css" asp-append-version="true">
+        <link rel="stylesheet" href="~/css/simple-sidebar.css" asp-append-version="true">
+        <link rel="stylesheet" href="~/css/slideout-js.css" asp-append-version="true">
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
     <environment exclude="Development">
         <link rel="stylesheet" href="~/css/sticky-footer-navbar.css" asp-append-version="true" />
+        <link rel="stylesheet" href="~/css/simple-sidebar.css" asp-append-version="true">
+        <link rel="stylesheet" href="~/css/main-site.css" asp-append-version="true">
+        <link rel="stylesheet" href="~/css/slideout-js.css" asp-append-version="true">
         <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
                 asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
                 asp-fallback-test="window.jQuery"
@@ -111,6 +158,20 @@
     </environment>
 
     @RenderSection("Scripts", required: false)
+
+    <script>
+        var slideout = new Slideout({
+            'panel': document.getElementById('panel'),
+            'menu': document.getElementById('menu'),
+            'padding': 256,
+            'tolerance': 70
+        });
+
+        document.querySelector('.toggle-button').addEventListener('click', function () {
+            slideout.toggle();
+        });
+    </script>
+
 
 </body>
 
